// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List Row > should be defined 1`] = `
<div>
  <div
    class="HvTableContainer-root css-e7buj3-StyledTableContainer e12doz4i0"
  >
    <table
      class="HvTable-root HvTable-listRow css-3e7u5q-StyledTable e12hqti90"
    >
      <thead
        class="HvTableHead-root css-1c8o9gy-StyledTableHead e122w5bu0"
      >
        <tr
          class="HvTableRow-root HvTableRow-head HvTableRow-variantListHead css-1882nl0-StyledTableRow e1cjstvf0"
        >
          <th
            class="HvTableHeader-root HvTableHeader-head HvTableHeader-variantList css-vran7v-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1tdvqey-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-vwwkrm-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 0
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head HvTableHeader-variantList css-vran7v-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1tdvqey-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-vwwkrm-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 1
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head HvTableHeader-variantList css-vran7v-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1tdvqey-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-vwwkrm-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 2
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="HvTableBody-root css-1uj09q8-StyledTableBody e1i1hapa0"
      >
        <tr
          class="HvFocus-root grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-1cb4ggl-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvFocus-root grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-1cb4ggl-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvFocus-root grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-1cb4ggl-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvFocus-root grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-1cb4ggl-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvFocus-root grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-1cb4ggl-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvFocus-root grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-1cb4ggl-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-1jqgxep-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Simple Table > should be defined 1`] = `
<div>
  <div
    class="HvTableContainer-root css-e7buj3-StyledTableContainer e12doz4i0"
  >
    <table
      class="HvTable-root css-ugjhzw-StyledTable e12hqti90"
    >
      <thead
        class="HvTableHead-root css-1c8o9gy-StyledTableHead e122w5bu0"
      >
        <tr
          class="HvTableRow-root HvTableRow-head css-1hgvxfz-StyledTableRow e1cjstvf0"
        >
          <th
            class="HvTableHeader-root HvTableHeader-head css-1gnva3q-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1tdvqey-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-vwwkrm-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 0
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head css-1gnva3q-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1tdvqey-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-vwwkrm-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 1
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head css-1gnva3q-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1tdvqey-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-vwwkrm-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 2
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="HvTableBody-root css-1uj09q8-StyledTableBody e1i1hapa0"
      >
        <tr
          class="grid HvTableRow-root HvTableRow-body css-mn0dw8-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-mn0dw8-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-mn0dw8-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-mn0dw8-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-mn0dw8-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-mn0dw8-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1rfsof4-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
